--- a/package.json
+++ b/package.json
@@ -21,13 +21,20 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
+    "@ngrx/effects": "^18.1.0",
+    "@ngrx/router-store": "^18.1.0",
+    "@ngrx/store": "^18.1.0",
+    "@progress/kendo-angular-buttons": "^16.11.0",
+    "@progress/kendo-angular-inputs": "^16.11.0",
+    "@progress/kendo-angular-layout": "^16.11.0",
+    "@progress/kendo-theme-default": "^9.1.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.7",
+    "@angular-devkit/build-angular": "^18.2.8",
     "@angular/cli": "^18.2.7",
     "@angular/compiler-cli": "^18.2.0",
     "@types/express": "^4.17.17",
