--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
+    "@angular/localize": "^18.2.0",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
@@ -25,8 +26,17 @@
     "@ngrx/router-store": "^18.1.0",
     "@ngrx/store": "^18.1.0",
     "@progress/kendo-angular-buttons": "^16.11.0",
+    "@progress/kendo-angular-common": "16.11.0",
+    "@progress/kendo-angular-dateinputs": "^16.11.0",
+    "@progress/kendo-angular-icons": "^16.11.0",
     "@progress/kendo-angular-inputs": "^16.11.0",
+    "@progress/kendo-angular-intl": "^16.11.0",
+    "@progress/kendo-angular-l10n": "^16.11.0",
     "@progress/kendo-angular-layout": "^16.11.0",
+    "@progress/kendo-angular-navigation": "16.11.0",
+    "@progress/kendo-angular-popup": "16.11.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-svg-icons": "^3.0.0",
     "@progress/kendo-theme-default": "^9.1.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
@@ -37,6 +47,7 @@
     "@angular-devkit/build-angular": "^18.2.8",
     "@angular/cli": "^18.2.7",
     "@angular/compiler-cli": "^18.2.0",
+    "@angular/localize": "^18.2.8",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
