--- a/package.json
+++ b/package.json
@@ -26,19 +26,24 @@
     "@ngrx/router-store": "^18.1.0",
     "@ngrx/store": "^18.1.0",
     "@progress/kendo-angular-buttons": "^16.11.0",
-    "@progress/kendo-angular-common": "16.11.0",
+    "@progress/kendo-angular-charts": "^16.11.0",
+    "@progress/kendo-angular-common": "^16.11.0",
     "@progress/kendo-angular-dateinputs": "^16.11.0",
-    "@progress/kendo-angular-icons": "^16.11.0",
+    "@progress/kendo-angular-icons": "16.11.0",
     "@progress/kendo-angular-inputs": "^16.11.0",
     "@progress/kendo-angular-intl": "^16.11.0",
     "@progress/kendo-angular-l10n": "^16.11.0",
     "@progress/kendo-angular-layout": "^16.11.0",
+    "@progress/kendo-angular-map": "^16.11.0",
     "@progress/kendo-angular-navigation": "16.11.0",
     "@progress/kendo-angular-popup": "16.11.0",
+    "@progress/kendo-data-query": "^1.7.0",
+    "@progress/kendo-drawing": "^1.20.4",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-svg-icons": "^3.0.0",
     "@progress/kendo-theme-default": "^9.1.0",
     "express": "^4.18.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
