--- a/package.json
+++ b/package.json
@@ -25,18 +25,29 @@
     "@ngrx/effects": "^18.1.0",
     "@ngrx/router-store": "^18.1.0",
     "@ngrx/store": "^18.1.0",
-    "@progress/kendo-angular-buttons": "^16.11.0",
+    "@progress/kendo-angular-buttons": "16.11.0",
     "@progress/kendo-angular-charts": "^16.11.0",
-    "@progress/kendo-angular-common": "^16.11.0",
+    "@progress/kendo-angular-common": "16.11.0",
     "@progress/kendo-angular-dateinputs": "^16.11.0",
+    "@progress/kendo-angular-dialog": "16.11.0",
+    "@progress/kendo-angular-dropdowns": "^16.11.0",
+    "@progress/kendo-angular-excel-export": "^16.11.0",
+    "@progress/kendo-angular-grid": "^16.11.0",
     "@progress/kendo-angular-icons": "16.11.0",
+    "@progress/kendo-angular-indicators": "^16.11.0",
     "@progress/kendo-angular-inputs": "^16.11.0",
-    "@progress/kendo-angular-intl": "^16.11.0",
-    "@progress/kendo-angular-l10n": "^16.11.0",
+    "@progress/kendo-angular-intl": "16.11.0",
+    "@progress/kendo-angular-l10n": "16.11.0",
+    "@progress/kendo-angular-label": "^16.11.0",
     "@progress/kendo-angular-layout": "^16.11.0",
+    "@progress/kendo-angular-listbox": "^16.11.0",
     "@progress/kendo-angular-map": "^16.11.0",
     "@progress/kendo-angular-navigation": "16.11.0",
+    "@progress/kendo-angular-pdf-export": "^16.11.0",
     "@progress/kendo-angular-popup": "16.11.0",
+    "@progress/kendo-angular-progressbar": "16.11.0",
+    "@progress/kendo-angular-treeview": "^16.11.0",
+    "@progress/kendo-angular-utils": "^16.11.0",
     "@progress/kendo-data-query": "^1.7.0",
     "@progress/kendo-drawing": "^1.20.4",
     "@progress/kendo-licensing": "^1.0.2",
