--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "hammerjs": "^2.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typeface-inter": "^3.18.1",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
