--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@progress/kendo-angular-grid": "^16.11.0",
     "@progress/kendo-angular-icons": "16.11.0",
     "@progress/kendo-angular-indicators": "^16.11.0",
-    "@progress/kendo-angular-inputs": "^16.11.0",
+    "@progress/kendo-angular-inputs": "16.11.0",
     "@progress/kendo-angular-intl": "16.11.0",
     "@progress/kendo-angular-l10n": "16.11.0",
     "@progress/kendo-angular-label": "^16.11.0",
@@ -46,10 +46,10 @@
     "@progress/kendo-angular-pdf-export": "^16.11.0",
     "@progress/kendo-angular-popup": "16.11.0",
     "@progress/kendo-angular-progressbar": "16.11.0",
-    "@progress/kendo-angular-treeview": "^16.11.0",
+    "@progress/kendo-angular-treeview": "16.11.0",
     "@progress/kendo-angular-utils": "^16.11.0",
     "@progress/kendo-data-query": "^1.7.0",
-    "@progress/kendo-drawing": "^1.20.4",
+    "@progress/kendo-drawing": "^1.17.2",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-svg-icons": "^3.0.0",
     "@progress/kendo-theme-default": "^9.1.0",
